--- a/src/app/questions/questions.component.scss
+++ b/src/app/questions/questions.component.scss
@@ -9,3 +9,10 @@ app-question-form,
 app-questions-list {
   margin-bottom: 50px;
 }
+
+app-question-item {
+  width: 600px;
+  max-width: 90vw;
+  display: block;
+  margin-bottom: 25px;
+}
