--- a/src/app/questions/components/question-item/question-item.component.html
+++ b/src/app/questions/components/question-item/question-item.component.html
@@ -1,7 +1,20 @@
-<mat-list-item>
-  {{ question | json }}
-  <button mat-icon-button [color]="question.liked ? 'primary' : 'none'" aria-label="Лайк вопросу"
-    (click)="likeToggle.emit(question)">
-    <mat-icon>thumb_up</mat-icon>
-  </button>
+<mat-list-item style="height:auto">
+  <mat-card>
+    <h3 class="mat-subheading-2" matLine style="font-weight: bold">
+      {{ question.name }}
+    </h3>
+
+    <p class="mat-body-2" matLine>
+      {{ question.text }}
+    </p>
+
+    <mat-card-actions>
+      <button mat-icon-button [color]="question.liked ? 'primary' : 'none'" aria-label="Поставить лайк вопросу"
+        (click)="likeToggle.emit(question)" class="like">
+        <mat-icon [@like]="question.liked ? 'liked' : 'unliked'">thumb_up</mat-icon>
+        <span class="like-count">{{ question.likes }}</span>
+      </button>
+    </mat-card-actions>
+
+  </mat-card>
 </mat-list-item>
