--- a/src/app/questions/components/question-item/question-item.component.html
+++ b/src/app/questions/components/question-item/question-item.component.html
@@ -10,10 +10,10 @@
 
     <mat-card-actions>
       <button mat-icon-button [color]="question.liked ? 'primary' : 'none'" aria-label="Поставить лайк вопросу"
-        (click)="likeToggle.emit(question)" class="like">
+        (click)="likeToggle(question)" class="like">
         <mat-icon [@like]="question.liked ? 'liked' : 'unliked'">thumb_up</mat-icon>
-        <span class="like-count">{{ question.likes }}</span>
       </button>
+      <span class="like-count">{{ question.likes || 0 }}</span>
     </mat-card-actions>
 
   </mat-card>
