--- a/src/app/questions/questions.component.html
+++ b/src/app/questions/questions.component.html
@@ -14,7 +14,7 @@
   <h2 class="mat-title" *ngIf="questions.length">Список вопросов</h2>
   <app-questions-list [@listAnimation]="questions.length">
     <app-question-item *ngFor="let question of questions; trackBy: trackByFn;" [question]="question"
-      (likeToggle)="likeToggle($event)">
+      (toggleLike)="toggleLike($event)">
     </app-question-item>
   </app-questions-list>
 </ng-container>
