swipe to delete scaffold

--- a/src/app/questions/components/question-item/question-item.component.html
+++ b/src/app/questions/components/question-item/question-item.component.html
@@ -9,11 +9,17 @@
     </p>
 
     <mat-card-actions>
-      <button mat-icon-button [color]="question.liked ? 'primary' : 'none'" aria-label="Поставить лайк вопросу"
-        (click)="toggleLike.emit(question)" class="like">
-        <mat-icon [@like]="question.liked ? 'liked' : 'unliked'">thumb_up</mat-icon>
+      <button mat-icon-button>
+        <mat-icon color="primary">tag_faces</mat-icon>
       </button>
-      <span class="like-count">{{ question.likes || 0 }}</span>
+
+      <div>
+        <button mat-icon-button [color]="question.liked ? 'primary' : 'none'" aria-label="Поставить лайк вопросу"
+          (click)="toggleLike.emit(question)" class="like">
+          <mat-icon [@like]="question.liked ? 'liked' : 'unliked'">thumb_up</mat-icon>
+        </button>
+        <span class="like-count">{{ question.likes || 0 }}</span>
+      </div>
     </mat-card-actions>
 
   </mat-card>
