--- a/src/styles.scss
+++ b/src/styles.scss
@@ -16,13 +16,13 @@ app-questions-list {
   }
 }
 
-[appSwipeAction] {
+[ngxSwipeAction] {
   cursor: grab;
 
   &:active {
     cursor: grabbing;
   }
-  .swipe-action-button {
+  .swipe-action-wrapper {
     height: 100%;
     background: $warn;
     position: absolute;
@@ -34,6 +34,9 @@ app-questions-list {
     color: white;
     font-size: 24px;
     font-weight: bold;
+    border-radius: 4px;
+    box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2),
+      0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.1);
 
     mat-icon {
       &.active {
