--- a/src/app/questions/questions.component.html
+++ b/src/app/questions/questions.component.html
@@ -12,8 +12,10 @@
 <ng-container *ngIf="(questions$ | async) as questions">
   <h2 class="mat-title" *ngIf="questions.length">Список вопросов</h2>
   <app-questions-list [@listAnimation]="questions.length">
-    <app-question-item appSwipeAction (swipeAction)="onDelete(question.id)"
-      *ngFor="let question of questions; trackBy: trackByFn;" [question]="question" (toggleLike)="toggleLike($event)">
-    </app-question-item>
+    <li *ngFor="let question of questions; trackBy: trackByFn;">
+      <app-question-item ngxSwipeAction [ngxSwipeActionConfig]="swipeActionConfig"
+        (ngxSwipeActionDone)="onDelete(question.id)" [question]="question" (toggleLike)="toggleLike($event)">
+      </app-question-item>
+    </li>
   </app-questions-list>
 </ng-container>
